--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/git
     username: root
-    password: 123456
+    password: 13850179569
     driver-class-name: com.mysql.cj.jdbc.Driver
   spring:
     security:
